@@ -1,3 +1,13 @@
+2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>
+
+	* xs/ClutterModel.xs: Bind:
+
+	  clutter_model_set_sort()
+	  clutter_model_set_filter()
+
+	and start providing basic functionality for subclassing
+	Clutter::Model with a pure-perl implementation.
+
 2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>
 
 	* examples/script.pl: Fix the timeline to be used by the
